--- a/src/components/LoginForm/LoginForm.css
+++ b/src/components/LoginForm/LoginForm.css
@@ -108,13 +108,39 @@
 @media screen and (max-width: 500px) {
     .form-body{
         gap: 0.4rem;
-        justify-content: center;
         width: 90%;
         height: 300px;
-        background-color: #d7e3ff55;
-        box-shadow: 3px 3px 11px rgba(3, 3, 3, 0.771);
-    
         
     
     }
+}
+
+@media screen and (min-width: 2000px) {
+    .form-body{
+        gap: 0.4rem;
+        width: 30%;
+        height: 600px;
+    }
+    .title{
+        font-size: 68px;
+    }
+    .title2{
+        font-size: 58px;
+    }
+    
+.form__label{
+
+    font-size: 100px;
+}
+
+.form__input{
+    font-size:2.4rem;
+    padding: 5px;
+    margin: 5px;
+}
+.submit2{
+    border: 2px solid rgb(0, 0, 0);
+    font-size: 2rem;
+    padding: 15px;
+}
 }
