--- a/src/components/Home2/Carrousel/Carrousel.css
+++ b/src/components/Home2/Carrousel/Carrousel.css
@@ -67,7 +67,8 @@
 .contenedor-carrousel {
   display: flex;
   background-color: rgb(22, 22, 22);
-  height: 90vw;
+  height: 100vw;
+  min-height: 100vw;
   align-items: center;
   justify-content: center;
   flex-direction: column;
