--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,6 @@
+*{
+scroll-behavior: smooth;
+}
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -10,4 +13,21 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+::-webkit-scrollbar {
+  width: 10px;
+}
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 3px rgb(0, 0, 0);
+  background-color: rgb(7, 4, 4);
+}
+::-webkit-scrollbar-thumb {
+  background: rgb(177, 177, 177);
+  border: 4px solid rgb(0, 0, 0);
+  border-radius: 12px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: rgb(91, 91, 91);
 }
