--- a/src/layouts/Main.css
+++ b/src/layouts/Main.css
@@ -5,7 +5,7 @@
     flex-direction: column;
 }
 .Div{
-    background-color: rgba(26, 26, 26, 0.626);
+    background-color: rgb(26, 26, 26);
     display: flex;
     flex-grow: 1;
     flex-direction: column;
