--- a/src/components/home1/Navbar/NavBar.css
+++ b/src/components/home1/Navbar/NavBar.css
@@ -14,6 +14,14 @@
     position: absolute;
     top: 200px; 
 }
+.d{
+    position: absolute;
+    top: 250px; 
+}
+.f{
+    position: absolute;
+    top: 300px; 
+}
 
 .ul{
         list-style: none;
