--- a/src/components/Home2/Carrousel/Carrousel.css
+++ b/src/components/Home2/Carrousel/Carrousel.css
@@ -1,95 +1,59 @@
-.active {
-  border: 2px solid #ffaa00;
-  transform: scale(1.3);
-  transition: all 300ms;
-}
-
-.carrousel {
-  display: flex;
+.contenedor-carrousel{
   width: 100%;
+  height: 100%;
+  display: flex;
   flex-direction: column;
-  justify-content: center;
-  align-content: center;
   align-items: center;
-}
-
-.slideshow {
-  position: relative;
-  margin-top: 2rem;
-  margin-bottom: 2rem;
-}
-
-.mainImg {
-  transition: all 500ms;
-  height: 55vw;
-  width: 100%;
-  max-width: 100%;
-  padding: 20px;
-}
-
-.actions {
-  position: absolute;
-  top: 50%;
-  width: 100%;
-  display: flex;
-  justify-content: space-between;
-}
-
-.actions button {
-  background: #0000003d;
-  border: none;
-  cursor: pointer;
-  padding: 10px;
-  margin: 5px;
-  border-radius: 15px;
-  padding-top: 5px;
-  font-size: 5vw;
-}
-
-.actions button:active {
-  background: #000000a2;
-  border: none;
-  cursor: pointer;
-  padding: 10px;
-  padding-top: 10px;
-  margin: 5px;
-  border-radius: 15px;
-  padding-top: 5px;
-}
-.tumbnail {
-  max-width: 100%;
+  justify-content: center;
+  gap: 1rem;
   flex-grow: 1;
-  justify-content: center;
-  display: flex;
-  flex-wrap: wrap;
 }
-
-.contenedor-carrousel {
+.contenedor-imgs{
   display: flex;
-  background-color: rgb(22, 22, 22);
-  height: 100vw;
-  min-height: 100vw;
-  align-items: center;
   justify-content: center;
-  flex-direction: column;
-  width: 100%;
+  align-items: center;
 }
-.contenedor-carrousel2 {
+.btn-carrousel{
   display: flex;
-  background-color: rgb(22, 22, 22);
+  background: transparent;
+  border: none;
+  height: 20px;
+  justify-content: flex-start;
   align-items: center;
+}
+.btn-carrousel{
+  display: flex;
+  background: transparent;
+  border: none;
+  height: 20px;
+  justify-content: flex-start;
+  align-items: center;
+}
+.imgsCarousel{
+  width: 235px;
+  height: 235px;
+  object-fit: cover;
+  border-radius: 10px 10px 20px 20px;
+  margin: .35rem;
+}
+.btns-carousel{
+  height: 50px;
+  display: flex;
   justify-content: center;
-  width: 100%;
+  align-items: center;
+  margin-top: 15rem;
+}
+.contenedor-button{
+  display: flex;
   flex-direction: column;
+  justify-content: center;
+  align-items: flex-end;
+  height: 100%;
 }
 
 @media screen and (min-width: 2000px) {
-  .contenedor-carrousel {
-    height: 90vw;
-  }
-  .tumbnail > img {
-    width: 11vh;
-    height: 12vh;
+  .imgsCarousel {
+    height: 20vh;
   }
 }
 
@@ -137,5 +101,28 @@
     display: flex;
     width: 3.5vh;
     height: 3.5vh;
+  }
+}
+@media screen and (max-width: 670px){
+  .imgsCarousel{
+      width: 200px;
+      height: 200px;
+      margin: .2rem
+  }
+}
+
+@media screen and (max-width: 550px){
+  .imgsCarousel{
+      width: 200px;
+      height: 200px;
+      margin: .1rem
+  }
+}
+
+@media screen and (max-width: 500px){
+  .imgsCarousel{
+      width: 150px;
+      height: 150px;
+      margin: .4rem
   }
 }
