--- a/src/components/HotelsPage/Hotels.css
+++ b/src/components/HotelsPage/Hotels.css
@@ -59,6 +59,7 @@ input[type="search"]::-webkit-search-cancel-button {
     gap:  3rem;
     text-align: center;
     padding-bottom: 50px;
+    min-height: 80vh;
 }
 .hotel-card{
     border: 1px solid rgb(0, 0, 0);
