--- a/src/layouts/Footer/Footer.css
+++ b/src/layouts/Footer/Footer.css
@@ -35,7 +35,7 @@
   font-weight: bold;
   color: #ffffff;
   border-radius: 5px;
-  background-color: #814500;
+  background-color: #8b8b8b;
   padding: 18px 30px;
   position: fixed;
   bottom: 40px;
@@ -45,7 +45,7 @@
   z-index: 99;
 }
 .btn-flotante:hover {
-  background-color: #db7500; /* Color de fondo */
+  background-color: #bebebe;
   box-shadow: 0px 15px 20px rgba(0, 0, 0, 0.3);
   transform: translateY(-7px);
 }
