--- a/src/pages/Cities/Cities.css
+++ b/src/pages/Cities/Cities.css
@@ -49,6 +49,7 @@
     display: flex;
     flex-direction: row;
     width: 100%;
+    min-height: 100vh;
     padding-left:10rem;
     padding-right:10rem;
     flex-wrap: wrap;
@@ -91,8 +92,10 @@
         height: 200px;
     
     }
-    .hotels-container{
+    .cities-container{
         padding: 10px;
+        min-height: 50vh;
+        flex-grow: 1;
     }
     .filtros-hotels{
         margin: 0;
