--- a/src/components/DetailsHotel/DetailsHotels.css
+++ b/src/components/DetailsHotel/DetailsHotels.css
@@ -3,7 +3,6 @@
 }
 .main-details{
     min-height: 100vh;
-    height: 100vh;
     background-color: rgb(22, 22, 22);
 }
 .main-space{
@@ -16,6 +15,7 @@
     gap: 2rem;
 }
 .show-space{
+    min-height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -44,6 +44,7 @@
     background-color:rgb(255, 255, 255);
     color: rgb(16, 1, 1);
     font-weight: bold;
+    flex-wrap: wrap;
 
 
 }
@@ -61,21 +62,41 @@
 }
 
 .right-mh{
+    display: flex;
     width: 50%;
     height: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    padding: 20px;
+    flex-wrap: wrap;
     text-align: center;
-    gap: 2rem;
+
 }
 @media screen and (max-width: 900px){
     .main-details{
         height: auto;
         background-color: rgb(22, 22, 22);
     
+    }
+
+}
+@media screen and (max-width: 800px ){
+    .right-mh{
+        display: flex;
+        font-size: 12px;
+        padding: 0px!important;
+        margin: 0px;
+        gap: 0;
+        width: 20%;
+    }
+    .right-mh > p{
+        display: flex;
+        justify-content: flex-end;
+        width: 50%;
+        padding: 0;
+        margin: 0;
+        gap: 0;
     }
 }
 @media screen and (min-width: 2000px) {
