--- a/src/components/home1/Navbar/NavBar.css
+++ b/src/components/home1/Navbar/NavBar.css
@@ -22,6 +22,14 @@
     position: absolute;
     top: 300px; 
 }
+.g{
+    position: absolute;
+    top: 350px; 
+}
+.h{
+    position: absolute;
+    top: 400px; 
+}
 
 .ul{
         list-style: none;
