--- a/src/components/home1/Navbar/NavBar.css
+++ b/src/components/home1/Navbar/NavBar.css
@@ -18,6 +18,10 @@
     position: absolute;
     top: 250px; 
 }
+.e{
+    position: absolute;
+    top: 300px; 
+}
 .f{
     position: absolute;
     top: 300px; 
