--- a/src/components/Profile/styles/ViewProfile2.css
+++ b/src/components/Profile/styles/ViewProfile2.css
@@ -154,3 +154,27 @@
   padding: 5px;
   font-weight: bold;
 }
+
+@media screen and (max-width: 750px){
+  .profile-card{
+     flex-direction: column;
+     min-height: 100vh;
+      height: auto;
+  }
+  .userData-cols{
+    flex-direction: column;
+    gap: 1rem;
+  }
+ .col-1-pc2{
+  width: 100%;
+  height: auto;
+ }
+ .col-2-pc2{
+  width: 100%;
+  height: auto;
+  min-height: 100vh;
+ }
+ .col-2-userData-1-2{
+  height: 100vh;
+ }
+}
