--- a/src/components/Profile/styles/ViewProfile2.css
+++ b/src/components/Profile/styles/ViewProfile2.css
@@ -154,27 +154,36 @@
   padding: 5px;
   font-weight: bold;
 }
-
 @media screen and (max-width: 750px){
   .profile-card{
      flex-direction: column;
-     min-height: 100vh;
       height: auto;
-  }
-  .userData-cols{
-    flex-direction: column;
-    gap: 1rem;
+      width: 100%;
+      padding: 0;
+      flex-wrap: wrap;
+      margin-bottom: 40px;
+    }
+    .userData-cols{
+      flex-direction: column;
+      width: 100%;
+      padding: 0;
+      flex-wrap: wrap;
+      gap: 1rem;
   }
  .col-1-pc2{
   width: 100%;
   height: auto;
+  border: none;
+  margin: 0;
+  box-shadow: none;
+  flex-wrap: wrap;
  }
  .col-2-pc2{
   width: 100%;
   height: auto;
-  min-height: 100vh;
- }
- .col-2-userData-1-2{
-  height: 100vh;
+  margin: 0;
+  border: none;
+  box-shadow: none;
+  flex-wrap: wrap;
  }
 }
