--- a/src/components/home1/Navbar/NavBar.css
+++ b/src/components/home1/Navbar/NavBar.css
@@ -34,6 +34,10 @@
     position: absolute;
     top: 400px; 
 }
+.i{
+    position: absolute;
+    top: 450px; 
+}
 
 .ul{
         list-style: none;
