--- a/src/pages/myShows/myShows.css
+++ b/src/pages/myShows/myShows.css
@@ -23,3 +23,20 @@
     margin-top: 50px;
     text-align: center;
 }
+.myshows-header{
+    width: 100%;
+    display: flex;
+    margin-top: 10px;
+}
+.myshows-header > .title-header{
+    width: 90%;
+    display: flex;
+    justify-content: center;
+    padding-left: 150px;
+}
+.btn-createshow{
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    gap: 1;
+}
