--- a/src/components/home1/Navbar/NavBar.css
+++ b/src/components/home1/Navbar/NavBar.css
@@ -1,47 +1,25 @@
-.a{
-    position: absolute;
-    top: 150px; 
-    color: aqua;
-    text-decoration: none;
+.button-singout{
+    background-color: rgb(151, 151, 151);
+    color: black;
+    padding: .3rem;
+    border-radius: .5rem;
+    color: rgb(255, 255, 255);
 }
-
-.b{
-    position: absolute;
-    top: 100px; 
-}
-
-.c{
-    position: absolute;
-    top: 200px; 
-}
-.d{
-    position: absolute;
-    top: 250px; 
-}
-.e{
-    position: absolute;
-    top: 300px; 
-}
-.f{
-    position: absolute;
-    top: 300px; 
-}
-.g{
-    position: absolute;
-    top: 350px; 
-}
-.h{
-    position: absolute;
-    top: 400px; 
-}
-.i{
-    position: absolute;
-    top: 450px; 
+.button-singout:hover{
+    background-color: azure;
+    color: black;
 }
 
 .ul{
-        list-style: none;
+    text-decoration: no;
+    list-style: none;
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    margin-top: .5rem;
 }
+
 
 .ancorLink{
     text-decoration: none;
