--- a/src/components/DetailsHotel/DetailsHotels.css
+++ b/src/components/DetailsHotel/DetailsHotels.css
@@ -9,20 +9,8 @@
     margin-top: 100px;
     margin-bottom: 100px;
     display: flex;
-    justify-content: center;
-    align-items: center;
     flex-direction: row;
     gap: 2rem;
-}
-.show-space{
-    min-height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: row;
-    gap: 2rem;
-    margin-bottom: 30px;
-    flex-wrap: wrap;
 }
 .MainHotel{
     display: flex;
@@ -36,17 +24,11 @@
 }
 .MainShow{
     display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: row;
     width: 80vh;
-    height: 100%;
-    background-color:rgb(255, 255, 255);
+    background-color:#ffffff;
     color: rgb(16, 1, 1);
     font-weight: bold;
     flex-wrap: wrap;
-
-
 }
 .left-mh{
     width: 50%;
@@ -72,6 +54,38 @@
     flex-wrap: wrap;
     text-align: center;
 
+}
+.columns-comments{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    flex-wrap: wrap;
+    width: 100%;
+    height: 100%;
+    margin: 10px;
+}
+.btns-textarea{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-direction: row;
+}
+.green-btn{
+    width: 100px;
+    height: 25px;
+    background-color: rgb(103, 255, 103);
+    font-size: 20px;
+    border: 2px solid black;
+    font-weight: bold;
+}
+.red-btn{
+    width: 100px;
+    height: 25px;
+    background-color: rgb(255, 113, 103);
+    font-size: 20px;
+    border: 2px solid black;
+    font-weight: bold;
 }
 @media screen and (max-width: 900px){
     .main-details{
