--- a/src/pages/NewCity/NewCity.css
+++ b/src/pages/NewCity/NewCity.css
@@ -20,3 +20,16 @@ background-repeat: no-repeat;
 filter:contrast(100%);
 background-image: url("https://fondosmil.com/fondo/12419.jpg")
 }
+.select{
+    color: #000;
+    background-color: #fff;
+    box-shadow: 0 0 5px rgba(0,0,0,0.2);
+    border: none;
+    border-radius: 5px;
+    padding: 10px;
+    margin: 10px;
+    width: 190px;
+    font-size: 16px;
+    font-weight: 500;
+    outline: none;
+}
