--- a/src/components/DetailsHotel/DetailsHotels.css
+++ b/src/components/DetailsHotel/DetailsHotels.css
@@ -91,7 +91,10 @@
     .main-details{
         height: auto;
         background-color: rgb(22, 22, 22);
-    
+    }
+    .img-mh{
+        height: 30vh;
+        width: 100%;
     }
 
 }
