--- a/src/pages/DetailsCities/DitailsCities.css
+++ b/src/pages/DetailsCities/DitailsCities.css
@@ -7,6 +7,12 @@
     background-color: rgb(22, 22, 22);
 
 }
+.center-all{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
 .main-space{
     margin-top: 100px;
     margin-bottom: 100px;
@@ -71,7 +77,7 @@
     text-align: center;
     font-size: 2rem;
 }
-
+/* 
 @media screen and (max-width: 770px){
     .main-details{
         height: 10rem;
@@ -112,4 +118,4 @@
     p{
         font-size: 23px;
     }
-}
+} */
