--- a/src/pages/DetailsCities/DitailsCities.css
+++ b/src/pages/DetailsCities/DitailsCities.css
@@ -12,6 +12,7 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    color:white;
 }
 .main-space{
     margin-top: 100px;
